--- a/index.html
+++ b/index.html
@@ -1,34 +1,43 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <title>Website</title>
+    <link rel="shortcut icon" href="../images/logo.png">
     <link href="css/style.css" rel="stylesheet">
 </head>
-<body>
 
-<header class="header">
-    <div class="container">
-        <div class="header__inner">
-            <div class="header__logo">MoGo</div>
-            <nav class ='nav'>
-                <a class="nav__link" href="#">About</a>
-                <a class="nav__link" href="#">Service</a>
-                <a class="nav__link" href="#">Work</a>
-                <a class="nav__link" href="#">Blog</a>
-                <a class="nav__link" href="#">Contact</a>
-            </nav>
+<body>
+    <header class="header">
+        <div class="container">
+            <div class="header__inner">
+                <a href="index.html">
+                    <img class="header__logo" src="../images/logo.png">
+                </a>
+                <nav class='nav'>
+                    <a class="nav__link" href="astronaut.html">Космонавт</a>
+                    <a class="nav__link" href="gagarin.html">Юрий Гагарин</a>
+                    <a class="nav__link" href="musor.html">Космический мусор</a>
+                    <a class="nav__link" href="#">Космические аппараты</a>
+                    <a class="nav__link" href="#">Опрос зрителей</a>
+                </nav>
+            </div>
+        </div>
+    </header>
+
+
+    <div class="intro">
+        <div class="container">
+            <div class="intro__inner">
+                <h1 class="intro__title">Проблемы освоения космического пространства</h1>
+                <h2 class="intro__suptitle"></h2>
+            </div>
         </div>
     </div>
-</header>
-
-
-<div class="intro">
-    <div class="container">
-    </div>
-</div>
 </body>
+
 </html>
