Отправка тестовых текстовых файлов

--- a/astronaut.html
+++ b/astronaut.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <title>Космонавт</title>
-    <link rel="shortcut icon" href="../images/logo.png">
+    <link rel="shortcut icon" href="/images/logo.png">
     <link href="css/astro.css" rel="stylesheet">
 </head>
 
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="header__inner">
                 <a href="index.html">
-                    <img class="header__logo" src="../images/logo.png">
+                    <img class="header__logo" src="/images/logo.png">
                 </a>
                 <nav class='nav'>
                     <a class="nav__link" href="index.html">Главная страница</a>
