--- a/musor.html
+++ b/musor.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <title>Космический мусор</title>
-    <link rel="shortcut icon" href="/images/logo.png">
+    <link rel="shortcut icon" href="images/logo.png">
     <link href="css/astro.css" rel="stylesheet">
 </head>
 
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="header__inner">
                 <a href="index.html">
-                    <img class="header__logo" src="/images/logo.png">
+                    <img class="header__logo" src="images/logo.png">
                 </a>
                 <nav class='nav'>
                     <a class="nav__link" href="index.html">Главная страница</a>
@@ -31,7 +31,7 @@
     <div class="container__text">
         <h1>Космический мусор</h1>
         <p>Космический мусор — это все созданные человеком объекты и их части в космосе, которые уже не приносят никакой пользы, однако являются опасными для космических аппаратов, спутников, МКС, космонавтов.</p>
-        <img class="image" src="/images/musor1.jpg">
+        <img class="image" src="images/musor1.jpg">
         <p>Среди такого мусора в космосе существуют довольно большие или те, которые несут в себе довольно страшные для жизни (ядерные, токсичные и т. п.) материалы. Такие объекты несут потенциальную опасность для нашей планеты. Например, если случайно сойдут
             со своей орбиты, или будет неполное сгорание при прохождении плотных слоев атмосферы Земли и попадании обломков на объекты жизнедеятельности людей.</p>
         <p>Размер и количество их примерно подсчитаны, около 22 тысячи единиц диаметром 5-10 см, и больше полумиллиона 0.25-0.90 см.</p>
@@ -42,7 +42,7 @@
         <h1>Авария при столкновении МКС с космическим мусором</h1>
         <p>МКС движется по орбите со скоростью 7,66 км/с (27600 км/ч), так что любой встречный предмет может привести к повреждениям. Сегодня уже учитывается возможность встречи с космическим мусором и иллюминаторы станции изготавливаются из многослойного
             кварцевого и боросиликатного стекла, чтобы в случае столкновения с мельчайшими фрагментами это никак не сказалось.</p>
-        <img class="image_2" src="/images/musor2.png" align="right" title="Последствия встречи с космическим мусором">
+        <img class="image_2" src="images/musor2.png" align="right" title="Последствия встречи с космическим мусором">
         <p>Однако фрагменты диаметром до 1 см уже довольно опасны, а любой фрагмент диаметром более 10 см может разнести на куски спутник или космический корабль. МКС уже приходилось маневрировать, чтобы уклониться от крупных и довольно опасных фрагментов
             космического мусора.</p>
         <p>Так, в 2014 года орбиту космической станции перенесли практически на километр, чтобы не пересекаться с расчётной траекторией спускающегося фрагмента ступени, который принадлежал старой европейской ракете Ariane 5.</p>
@@ -55,7 +55,7 @@
         <p>Если в темную ночь в безоблачное небо посмотреть на звезды, можно заметить яркие вспышки. Большинство называют это звездопадом, в реальности же, это космический мусор входит в атмосферу и сгорает, вызвав такую реакцию.</p>
         <h1>Меры против космического мусора</h1>
         <p>Что касается проектов по удалению с орбиты уже накопившегося мусора, то большинство из них существуют, к сожалению, только на бумаге и не имеют финансирования для полноценных лётных испытаний.</p>
-        <img class="image_2" src="/images/musor3.png" align="left" title="Космические аппараты с сетями либо с манипуляторами для сбора космического мусора">
+        <img class="image_2" src="images/musor3.png" align="left" title="Космические аппараты с сетями либо с манипуляторами для сбора космического мусора">
         <p>Хотя в ряду других рассматривались, например, проекты спутников, испаряющих обломки мощным лазерным лучом или меняющих их орбиту ионными пучками, как проектируемый российский аппарат «Ликвидатор», который должен тормозить обломки для их входа
             в атмосферу с частичным или полным сгоранием в ней. В случае аппаратов на геостационарной орбите, уводить их на орбиту захоронения, либо аппарат, который будет собирать мусор для его дальнейшей переработки.</p>
         <p>В основном предлагается использовать космические аппараты с сетями либо с манипуляторами для сбора космического мусора и его последующего сведения в атмосферу вместе со «спутником-мусорщиком». Впрочем, первые прототипы «космических уборщиков»
