--- a/astronaut.html
+++ b/astronaut.html
@@ -22,8 +22,8 @@
                     <a class="nav__link" href="index.html">Главная страница</a>
                     <a class="nav__link" href="gagarin.html">Юрий Гагарин</a>
                     <a class="nav__link" href="musor.html">Космический мусор</a>
-                    <a class="nav__link" href="#">Космические аппараты</a>
-                    <a class="nav__link" href="#">Опрос зрителей</a>
+                    <a class="nav__link" href="aparati.html">Космические аппараты</a>
+                    <a class="nav__link" href="opros.html">Опрос зрителей</a>
                 </nav>
             </div>
         </div>
@@ -88,8 +88,6 @@
             центров подготовки космонавтов, в которых бывшие астронавты смогут вести преподавательскую деятельность.</p>
         <p>Если у вас остались хоть малейшие сомнения в том, что профессия космонавт подходит именно вам, то мы настоятельно рекомендуем пройти тест на профориентацию от Профгид. Он стоит сущие копейки, при этом позволяет избежать ошибок, которые могут пустить
             не в то русло и искалечить всю вашу жизнь.</p>
-        <!https://edunews.ru/professii/obzor/aviatsionnye/kosmonavt.html>
-    </div>
     </div>
 </body>
 
