--- a/gagarin.html
+++ b/gagarin.html
@@ -22,8 +22,8 @@
                     <a class="nav__link" href="index.html">Главная страница</a>
                     <a class="nav__link" href="astronaut.html">Космонавт</a>
                     <a class="nav__link" href="musor.html">Космический мусор</a>
-                    <a class="nav__link" href="#">Космические аппараты</a>
-                    <a class="nav__link" href="#">Опрос зрителей</a>
+                    <a class="nav__link" href="aparati.html">Космические аппараты</a>
+                    <a class="nav__link" href="opros.html">Опрос зрителей</a>
                 </nav>
             </div>
         </div>
@@ -35,7 +35,7 @@
         <p>Гагарин родился в семье колхозника 9 марта 1934 года, в деревне Клушино Гжатского района Смоленской области. Поговаривают, что на самом деле будущий космонавт появился на свет 8 марта, но отец попросил исправить документы, чтобы сын не мучился,
             совмещая два праздника. Часто биографы пытаются создать впечатление, будто родная деревня Юрия была глухой дырой, чтобы подчеркнуть, что даже «самородок из глубинки» может в одночасье покорить весь мир. Но малая родина будущего космонавта
             была не такой уж глухоманью. Гжатск находится недалеко от Москвы, а через Клушино проходил оживлённый Тверской тракт.</p>
-        <img src="images/gag2.jpg" align="right" title="Младшие Гагарины: Юра (сидит) вместе с братьями Валентином, Борисом и сестрой Зоей">
+        <img class="image_2" src="images/gag2.jpg" align="right" title="Младшие Гагарины: Юра (сидит) вместе с братьями Валентином, Борисом и сестрой Зоей">
         <p>Семья Гагариных (помимо Юрия, у них было ещё трое детей) жила в добротном крестьянском доме и не бедствовала даже после коллективизации — им удалось сохранить в личном пользовании немало скотины. Отец Алексей Иванович работал на мельнице, мать
             Анна Тимофеевна была дояркой, позже — заведующей скотофермой. Размеренную жизнь Гагариных нарушила война. 1 сентября 1941 года Юра пошёл в школу, а через месяц Клушино уже заняли немецкие войска.</p>
         <p>Войну Гагарины перенесли тяжело. Даже когда в марте 1943 года Гжатский район был освобождён, легче не стало. Отступая, гитлеровцы сожгли большинство домов и угнали на работы молодёжь, в том числе брата и сестру Юрия. К счастью, в 1945-м советские
@@ -43,7 +43,7 @@
         <p>После освобождения семья жила бедно — отец был занят на восстановлении села, старшие дети ещё не вернулись, и Юра, которому было всего девять лет, помогал маме по хозяйству. Параллельно он пытался учиться — хотя школу сожгли, деревенские дети
             занимались с учительницей в обычной избе. Вместо тетрадей писали на немецких листовках, счётные палочки заменили гильзами, а буквари — уставом РККА. В конце 1945 года семья, чтобы как-то выжить, решила перебраться в Гжатск. Юрий пошёл в третий
             класс местной школы.</p>
-        <img src="images/gag3.jpg" align="right" title="Юрий во время учёбы на литейщика">
+        <img class="image_2" src="images/gag3.jpg" align="right" title="Юрий во время учёбы на литейщика">
         <p>Будущий космонавт проявлял завидное упорство и желание учиться, интересовался всем на свете и быстро нагнал одноклассников. И с физическим развитием у Юры всё было в порядке — например, он победил в турнире по подтягиваниям на турнике. В шестом
             классе учитель физики Лев Беспалов, завоевавший расположение ребят научными фокусами, познакомил учеников с работами Циолковского — и Юра заинтересовался ракетной техникой.</p>
         <p>После шестого класса обучение прервалось: надо было кормить семью. Юрий уехал в Москву, а затем в Саратов, чтобы освоить дефицитную профессию мастера-литейщика. Не освоил, зато нашёл свою подлинную страсть. Небо.</p>
@@ -85,7 +85,6 @@
             вид человека в странном костюме. Но Юрий быстро объяснил, что он свой.</p>
         <img class="image" src="images/gag7.jpg">
         <p>В Москве его встречала толпа восторженных людей, руководители космической программы и Герман Титов. Юрий Гагарин стал знаменитостью.</p>
-        <!https://www.mirf.ru/science/yuriy-gagarin/>
     </div>
 </body>
 
