--- a/musor.html
+++ b/musor.html
@@ -22,8 +22,8 @@
                     <a class="nav__link" href="index.html">Главная страница</a>
                     <a class="nav__link" href="astronaut.html">Космонавт</a>
                     <a class="nav__link" href="gagarin.html">Юрий Гагарин</a>
-                    <a class="nav__link" href="#">Космические аппараты</a>
-                    <a class="nav__link" href="#">Опрос зрителей</a>
+                    <a class="nav__link" href="aparati.html">Космические аппараты</a>
+                    <a class="nav__link" href="opros.html">Опрос зрителей</a>
                 </nav>
             </div>
         </div>
@@ -55,7 +55,7 @@
         <p>Если в темную ночь в безоблачное небо посмотреть на звезды, можно заметить яркие вспышки. Большинство называют это звездопадом, в реальности же, это космический мусор входит в атмосферу и сгорает, вызвав такую реакцию.</p>
         <h1>Меры против космического мусора</h1>
         <p>Что касается проектов по удалению с орбиты уже накопившегося мусора, то большинство из них существуют, к сожалению, только на бумаге и не имеют финансирования для полноценных лётных испытаний.</p>
-        <img class="image_2" src="images/musor3.png" align="left" title="Космические аппараты с сетями либо с манипуляторами для сбора космического мусора">
+        <img class="image_3" src="images/musor3.png" align="left" title="Космические аппараты с сетями либо с манипуляторами для сбора космического мусора">
         <p>Хотя в ряду других рассматривались, например, проекты спутников, испаряющих обломки мощным лазерным лучом или меняющих их орбиту ионными пучками, как проектируемый российский аппарат «Ликвидатор», который должен тормозить обломки для их входа
             в атмосферу с частичным или полным сгоранием в ней. В случае аппаратов на геостационарной орбите, уводить их на орбиту захоронения, либо аппарат, который будет собирать мусор для его дальнейшей переработки.</p>
         <p>В основном предлагается использовать космические аппараты с сетями либо с манипуляторами для сбора космического мусора и его последующего сведения в атмосферу вместе со «спутником-мусорщиком». Впрочем, первые прототипы «космических уборщиков»
@@ -74,7 +74,6 @@
         </ul>
         <p>Любое человеческое внимание важно этой для проблемы уже сегодня! Детей завораживают звёзды и Луна, когда смотришь в телескоп, открывается большой и неизведанный мир для будущего человеческой цивилизации.</p>
     </div>
-    <!https://spacegid.com/kosmicheskij-musor.html>
 </body>
 
 </html>
