--- a/opros.html
+++ b/opros.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <title>Website</title>
+    <title>Опрос зрителей</title>
     <link rel="shortcut icon" href="images/logo.png">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/astro.css" rel="stylesheet">
 </head>
 
 <body>
@@ -19,25 +19,13 @@
                     <img class="header__logo" src="images/logo.png">
                 </a>
                 <nav class='nav'>
+                    <a class="nav__link" href="index.html">Главная страница</a>
                     <a class="nav__link" href="astronaut.html">Космонавт</a>
                     <a class="nav__link" href="gagarin.html">Юрий Гагарин</a>
                     <a class="nav__link" href="musor.html">Космический мусор</a>
                     <a class="nav__link" href="aparati.html">Космические аппараты</a>
-                    <a class="nav__link" href="opros.html">Опрос зрителей</a>
                 </nav>
             </div>
         </div>
     </header>
-
-
-    <div class="intro">
-        <div class="container">
-            <div class="intro__inner">
-                <h1 class="intro__title">Проблемы освоения космического пространства</h1>
-                <h2 class="intro__suptitle"></h2>
-            </div>
-        </div>
-    </div>
-</body>
-
-</html>
+    <div class="container__text">
